# heat-vagrant

./: .gitignore  README.md  README.rst  clouds.yaml.sample  phoobe.yaml.sample  requirements.txt  setup.cfg  setup.py  tox.ini
phoobe/: __init__.py  actions.py  defaults.py  environment.py  resources.py  shell.py  template.py  utils.py
samples/: cirros.hot.yaml  cirros.yaml
samples/cloudwatt/: README.rst  environment.yaml  script.sh
samples/devstack/: README.rst  devstack.sh  environment.yaml
