[metadata]
name = phoobe
summary = phoobe
description-file =
    README.rst
author = Christian Berendt
author-email = christian@berendt.io
home-page = https://github.com/berendt/phoobe
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    phoobe

[entry_points]
console_scripts =
    phoobe = phoobe.shell:main

phoobe.shell =
    list_flavors = phoobe.actions:ListFlavors
    list_images = phoobe.actions:ListImages
    list_networks_external = phoobe.actions:ListExternalNetworks
    list_networks_internal = phoobe.actions:ListInternalNetworks
    template = phoobe.actions:GenerateTemplate
    up = phoobe.actions:Up
    destroy = phoobe.actions:Destroy
    ssh = phoobe.actions:Ssh
    status = phoobe.actions:Status
    resources = phoobe.actions:Resources
    provision = phoobe.actions:Provision
    list_environments = phoobe.actions:ListEnvironments
